# eel_file

./: Cargo.toml  README.md  build.rs
assets/eelfacts/: amogus.txt  insanity.txt  normal.txt  sus.txt
src/: app_state.rs  controller.rs  eel_error.rs  eel_log.rs  lib.rs  main.rs  net_controller.rs  ui_app.rs
