[package]
name = "eel_file"
version = "0.1.6"
edition = "2024"
build = "build.rs"

[dependencies]
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt", "macros", "sync", "time", "rt-multi-thread", "signal", "net", "io-util"] }
tokio-util = "0.7.15"

eframe = { version = "0.31.1", features = [
    "default",
    "__screenshot"] }
egui_extras = {  version = "0.31.1", features = ["default", "image"] }

image = "0.25.6"
rfd = "0.15.3"

snow = "0.9.6"

sha2 = "0.11.0-rc.0"
hex-literal = "1.0.0"
sysinfo = "0.35.1"
chrono = "0.4.41"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "eel_file.exe"
LegalCopyright = "Copyright © 2025"
